; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_win32_init.c__glfwCreateWideStringFromUTF8Win32.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_win32_init.c__glfwCreateWideStringFromUTF8Win32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_UTF8 = common dso_local global i32 0, align 4
@GLFW_PLATFORM_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"Win32: Failed to convert string from UTF-8\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @_glfwCreateWideStringFromUTF8Win32(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i32, i32* @CP_UTF8, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @MultiByteToWideChar(i32 %6, i32 0, i8* %7, i32 -1, i32* null, i32 0)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @GLFW_PLATFORM_ERROR, align 4
  %13 = call i32 @_glfwInputErrorWin32(i32 %12, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %30

14:                                               ; preds = %1
  %15 = load i32, i32* %5, align 4
  %16 = call i32* @calloc(i32 %15, i32 4)
  store i32* %16, i32** %4, align 8
  %17 = load i32, i32* @CP_UTF8, align 4
  %18 = load i8*, i8** %3, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @MultiByteToWideChar(i32 %17, i32 0, i8* %18, i32 -1, i32* %19, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %28, label %23

23:                                               ; preds = %14
  %24 = load i32, i32* @GLFW_PLATFORM_ERROR, align 4
  %25 = call i32 @_glfwInputErrorWin32(i32 %24, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @free(i32* %26)
  store i32* null, i32** %2, align 8
  br label %30

28:                                               ; preds = %14
  %29 = load i32*, i32** %4, align 8
  store i32* %29, i32** %2, align 8
  br label %30

30:                                               ; preds = %28, %23, %11
  %31 = load i32*, i32** %2, align 8
  ret i32* %31
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32 @_glfwInputErrorWin32(i32, i8*) #1

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
